software-store (0.1.1) karmic; urgency=low

  * new release

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 25 Aug 2009 15:21:57 +0200

software-store (0.1) karmic; urgency=low

  * Initial release

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 21 Aug 2009 14:52:41 +0200