@@ -416,4 +416,37 @@
     <property name="visible">True</property>
     <property name="stock">gtk-missing-image</property>
   </object>
+  <object class="GtkAboutDialog" id="aboutdialog">
+    <property name="border_width">5</property>
+    <property name="type_hint">normal</property>
+    <property name="has_separator">False</property>
+    <property name="program_name">Ubuntu Software Store</property>
+    <property name="copyright" translatable="yes">(c) 2009 Canonical	</property>
+    <property name="comments" translatable="yes">A application to install and remove software</property>
+    <property name="website">http://launchpad.net/software-store</property>
+    <property name="authors">Michael Vogt</property>
+    <property name="logo_icon_name">software-store</property>
+    <signal name="close" handler="gtk_widget_hide"/>
+    <child internal-child="vbox">
+      <object class="GtkVBox" id="dialog-vbox1">
+        <property name="visible">True</property>
+        <property name="orientation">vertical</property>
+        <property name="spacing">2</property>
+        <child>
+          <placeholder/>
+        </child>
+        <child internal-child="action_area">
+          <object class="GtkHButtonBox" id="dialog-action_area1">
+            <property name="visible">True</property>
+            <property name="layout_style">end</property>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="pack_type">end</property>
+            <property name="position">0</property>
+          </packing>
+        </child>
+      </object>
+    </child>
+  </object>
 </interface>
