@@ -19,6 +19,7 @@ Depends: ${python:Depends},
          ${misc:Depends},
          app-install-data (>= 0.4.0),
          gnome-icon-theme,
+	 gnome-menus,
          python-apt (>= 0.7.13),
          python-dbus,
          python-gtk2,
