@@ -1,6 +1,9 @@
 software-store (0.1.1) karmic; urgency=low
 
-  * new release
+  * fix icon installing
+  * add dependency to gnome-menus (LP: #419152)
+  * add about dialog
+    
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 25 Aug 2009 15:21:57 +0200
 
